Inserts year nodes on the timeline

--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="" ng-app="ngPortfolio" > <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en-us" ng-app="ngPortfolio" > <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Hire the Most Creative Software Engineer</title>
-        <meta name="description" content="Navneet is a consistent performer as despite tons of ups and downs in his life. He always secured approximately same score in my academics.
-        He is a self-learner and I have been learning new skills online on Lynda.com and Udemy.com that improved his listening skill over time and now he is quite comfortable listening to American, British and Australian accent.">
+        <title>Hire the Most Creative Front End Developer | Software Engineer</title>
+        <meta name="description" content="Navneet is the awarded wekgeek and most creating Front End Developer &amp; Software Engineer. He is also a consistent self-learner. He likes to make the web a beautiful place by his design and animation skills. His measure skills includes AngularJs, Ionic, SASS, Bootstrap3, CSS3, JavaScript, HTML5, Version COntrol using Git and Github etc. ">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <base target="_blank">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -46,7 +45,7 @@
       <div id="loader" class="w3-jumbo"><i class="fa fa-spinner w3-spin w3-text-green" ng-hide="Hide"></i></div>
 
       <section ng-include="'components/siteheader.html'"></section>
-<!--
+
         <section class="w3-container">
           <div class="w3-card-4">
             <div class="w3-row-padding">
@@ -64,9 +63,9 @@
                   <p>Using my <strong><em>hands-on experience</em></strong> of Grid System and Frameworks like <a class="help" href="http://www.w3schools.com/w3css/default.asp" target="_blank">W3.css</a>  and Bootstrap, and Charting Libraries like Google chart I can rapidly build <strong><em>modern responsive UI</em></strong> for your projects.</p>
 
                   <button class="w3-btn w3-right w3-hover-white w3-blue w3-card-4" ng-click="more=true" ng-show="!more">Show More</button>
-              </div> --><!-- col -->
+              </div><!-- col -->
               
-<!--              <div class="w3-col l6">
+              <div class="w3-col l6">
                 <div class="w3-content" style="max-width:800px;position:relative">
                   <header class="w3-green">
                     <h3><i class="fa fa-trophy" aria-hidden="true"></i> Achievements &amp; Participations</h3>
@@ -102,22 +101,22 @@
                   <a class="w3-btn-floating w3-hover-dark-grey" style="position:absolute;top:45%;left:0" onclick="plusDivs(-1)">❮</a>
                   <a class="w3-btn-floating w3-hover-dark-grey" style="position:absolute;top:45%;right:0" onclick="plusDivs(1)">❯</a>
                 </div>
-              </div> --><!-- col -->  
-            <!-- </div> --><!-- row -->
-            <!-- <div class="w3-row w3-padding-left w3-padding-right">
+              </div> <!-- col -->  
+             </div> <!-- row -->
+             <div class="w3-row w3-padding-left w3-padding-right">
               <div class="w3-col">
                 <div class="more w3-animate-top" ng-show="more">
                   <p>Using SDLC, MVC and Angular Js we will be doing extremely fast test driven development of Web / Mobile Applications.</p>
 
                   <p>I was found as a <strong><em>reliable</em></strong> and <strong><em>responsible</em></strong> person by my institute with excellent grammatical and written communication skill that eliminates ambiguity in my communication, and was appointed as Magazine Secretary of the Institute where I successfully contributed as proofreader and <strong><em>led a team</em></strong> of 8 members, by coordination and collaboration we prepared Institute’s Magazine for the Magazine competition organized by University of Pune.</p>
-                </div> --><!-- more -->
-                  <!-- <button class="w3-btn w3-right w3-hover-white w3-blue w3-margin-bottom" ng-click="more=!more" ng-show="more">Less</button>
-              </div> --><!-- col -->
-            <!-- </div> --><!-- row -->
-          <!-- </div> --><!-- card -->
-        <!-- </section> -->
+                </div> <!-- more -->
+                   <button class="w3-btn w3-right w3-hover-white w3-blue w3-margin-bottom" ng-click="more=!more" ng-show="more">Less</button>
+              </div> <!-- col -->
+             </div> <!-- row -->
+           </div> <!-- card -->
+         </section>
 
-      <!-- EXPERIENCE AND SERVICES 
+      <!--  EXPERIENCE AND SERVICES 
       <section ng-include="'components/experienceandservices.html'"></section> -->
 
       <!-- TIMELINE -->
