--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Hire the Most Creative Front End Developer | Software Engineer</title>
-        <meta name="description" content="Navneet is the awarded wekgeek and most creating Front End Developer &amp; Software Engineer. He is also a consistent self-learner. He likes to make the web a beautiful place by his design and animation skills. His measure skills includes AngularJs, Ionic, SASS, Bootstrap3, CSS3, JavaScript, HTML5, Version COntrol using Git and Github etc. ">
+        <meta name="description" content="Navneet is an awarded wekgeek and most creating Front End Developer &amp; Software Engineer. He is also a consistent self-learner. He likes to make the web a beautiful place by his design and animation skills. His measure skills includes AngularJs, Ionic, SASS, Bootstrap3, CSS3, JavaScript, HTML5, Version COntrol using Git and Github etc. ">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <base target="_blank">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -133,10 +133,10 @@
         <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
         <script type="text/javascript" src="js/vendor/jquery-1.11.2.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+<!--         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-socialshare/2.3.3/angular-socialshare.min.js"></script>
-        <!-- <script src="node_modules/angular/angular.min.js"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-socialshare/2.3.3/angular-socialshare.min.js"></script> -->
+       <script src="node_modules/angular/angular.min.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/candidates.fac.js" type="text/javascript"></script>
         <script src="scripts/home.ctr.js" type="text/javascript"></script>
