Removes obsolete skills, updates introduction.

--- a/index.html
+++ b/index.html
@@ -50,15 +50,28 @@
                     <h3>May I introduce myself?</h3>
                   </header>
 
-                    <p>I am a <strong><em>consistent performer</em></strong> as despite tons of ups and downs in my life. I always secured approximately same score in my academics.</p>
-
-                      <p>I am a <strong><em>self-learner</em></strong> and I have been learning new skills online on Lynda.com and Udemy.com that also improved my listening skill over time and now I am quite comfortable listening to different international English accent.</p>
-
-                    <p>Using my Git and Github version control skills I can easily maintain my source code <strong><em>avoiding complexity and bugs</em></strong>, <strong><em>Contribute</em></strong> to a project from anywhere in the world.</p>
-
-                    <p>Using my <strong><em>hands-on experience</em></strong> of Grid System and Frameworks like <a class="help" href="http://www.w3schools.com/w3css/default.asp" target="_blank">W3.css</a>  and Bootstrap, and Charting Libraries like Google chart I can rapidly build <strong><em>modern responsive UI</em></strong> for your projects.</p>
-
-                    <button class="w3-btn w3-right w3-hover-white w3-blue w3-card-4" ng-click="more=true" ng-show="!more">Show More</button>
+                    <dl>
+                      <p>Following terms describes my personality well:</p>
+                      <dt>FONT END DEVELOPER</dt>
+                        <dd>Using Angular Js, Ionic I can build HTML enhanced web / mobile applications.</dd>
+                      <dt>DEBUGGER</dt>
+                        <dd>Using Google Chrome Dev Tool I can easily inspect web/mobile apps, locate bugs and debug, and optimize performance to maximize speed and scale.</dd>
+                      <dt>VERSION CONTROLLER</dt>
+                        <dd>Using my Git and Github version control skills I can easily maintain my source code avoiding complexity and bugs, Contribute to a project from anywhere in the world.</dd>
+                      <dt>DATA VISUALIZER</dt>
+                        <dd>Using Google Chart interactive charting library, I can build dashboard, represent dynamic data visually.</dd>
+                      <dt>ANIMATOR</dt>
+                        <dd>Using CSS3 keyframe animations or Adobe Photoshop CS6, I can build high performance customized animations in your UI. <a href="https://goo.gl/photos/3trtkzuWVutgSi3w7">WORK SAMPLE</a> </dd>
+                      <dt>IMAGE EDITOR</dt>
+                        <dd>Using Adobe Photoshop CS6, I do non-destructive, revision controlled editing of pictures, images. <a href="https://goo.gl/photos/3trtkzuWVutgSi3w7">WORK SAMPLE</a></dd>
+                      <dt>CONSISTENT PERFORMER</dt>
+                        <dd>I am a consistent performer as despite tons of ups and downs in my life. I always secured approximately same score in my academics.</dd>
+                      <dt>SELF-LEARNER</dt>
+                        <dd>I am a self-learner and I have been learning new skills online on Lynda.com and Udemy.com ng to different international English accent.</dd>
+                      <dt>PROOFREADER</dt>
+                        <dd>I am good at proofreading, and written communication skill, have contributed articles to institute's annual magazine, have partcipated in essay writing competition. </dd>
+                      <dt></dt>
+                    </dl>
                 </div><!-- col -->
                 
                 <div class="w3-col l6">
@@ -98,18 +111,7 @@
                     <a class="w3-btn-floating w3-hover-dark-grey" style="position:absolute;top:45%;right:0" onclick="plusDivs(1)">❯</a>
                   </div>
                 </div> <!-- col -->  
-               </div> <!-- row -->
-               <div class="w3-row w3-padding-left w3-padding-right">
-                <div class="w3-col">
-                  <div class="more w3-animate-top" ng-show="more">
-                    <p>Using SDLC, MVC and Angular Js we will be doing extremely fast test driven development of Web / Mobile Applications.</p>
-
-                    <p>I was found as a <strong><em>reliable</em></strong> and <strong><em>responsible</em></strong> person by my institute with excellent grammatical and written communication skill that eliminates ambiguity in my communication, and was appointed as Magazine Secretary of the Institute where I successfully contributed as proofreader and <strong><em>led a team</em></strong> of 8 members, by coordination and collaboration we prepared Institute’s Magazine for the Magazine competition organized by University of Pune.</p>
-                  </div> <!-- more -->
-                     <button class="w3-btn w3-right w3-hover-white w3-blue w3-margin-bottom" ng-click="more=!more" ng-show="more">Less</button>
-                </div> <!-- col -->
-               </div> <!-- row -->
-             </div> <!-- card -->
+               </div> <!-- card -->
            </section>
 
         <!--  EXPERIENCE AND SERVICES 
