Adds cross browser, platform independent icons in introduction and takes overflowing length of intro to new row.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div id="loader" class="w3-jumbo"><i class="fa fa-spinner w3-spin w3-text-green" ng-hide="hideSpinner"></i></div>
         <section ng-include="'components/siteheader.html'"></section>
 
-          <section class="w3-container w3-card-4">
+          <section class="w3-container w3-card-4" id="introduction">
               <div class="w3-row-padding">
                 <div class="w3-col l6">
                   <header class="w3-green">
@@ -51,25 +51,16 @@
 
                     <dl>
                       <p>Following terms describes my personality well:</p>
-                      <dt><i class="fa fa-code" aria-hidden="true"></i> FRONT END DEVELOPER</dt>
-                        <dd>Using Angular Js, Ionic I can build HTML enhanced web / mobile applications.</dd>
+                      <dt><i class="fa fa-code" aria-hidden="true"></i> APP DEVELOPER</dt>
+                        <dd>Using Angular Js, Ionic I can build cross browser <i class="fa fa-mobile" aria-hidden="true"></i>
+                        <i class="fa fa-tablet" aria-hidden="true"></i> <i class="fa fa-desktop" aria-hidden="true"></i> platform independent
+                        <i class="fa fa-android" aria-hidden="true"></i> <i class="fa fa-apple" aria-hidden="true"></i> <i class="fa fa-windows" aria-hidden="true"></i> HTML enhanced web / mobile applications.</dd>
                       <dt><i class="fa fa-bug" aria-hidden="true"></i> DEBUGGER</dt>
                         <dd>Using Google Chrome Dev Tool I can easily inspect web/mobile apps, locate bugs and debug, and optimize performance to maximize speed and scale.</dd>
                       <dt><i class="fa fa-code-fork" aria-hidden="true"></i> VERSION CONTROLLER</dt>
                         <dd>Using my Git and Github version control skills I can easily maintain my source code avoiding complexity and bugs, Contribute to a project from anywhere in the world.</dd>
                       <dt><i class="fa fa-pie-chart" aria-hidden="true"></i> DATA VISUALIZER</dt>
                         <dd>Using Google Chart interactive charting library, I can build dashboard, represent dynamic data visually.</dd>
-                      <dt><i class="fa fa-css3" aria-hidden="true"></i> ANIMATOR</dt>
-                        <dd>Using CSS3 keyframe animations or Adobe Photoshop CS6, I can build high performance customized animations in your UI. <a href="https://goo.gl/photos/3trtkzuWVutgSi3w7">WORK SAMPLE</a> </dd>
-                      <dt><i class="fa fa-pencil-square-o" aria-hidden="true"></i> IMAGE EDITOR</dt>
-                        <dd>Using Adobe Photoshop CS6, I do non-destructive, revision controlled editing of pictures, images. <a href="https://goo.gl/photos/3trtkzuWVutgSi3w7">WORK SAMPLE</a></dd>
-                      <dt><i class="fa fa-line-chart" aria-hidden="true"></i> CONSISTENT PERFORMER</dt>
-                        <dd>I am a consistent performer as despite tons of ups and downs in my life. I always secured approximately same score in my academics.</dd>
-                      <dt><i class="fa fa-graduation-cap" aria-hidden="true"></i> SELF-LEARNER</dt>
-                        <dd>I am a self-learner. I keep on updating/upgrading my skills, learning new skills on Lynda.com and Udemy.com </dd>
-                      <dt><i class="fa fa-eye" aria-hidden="true"></i> PROOFREADER</dt>
-                        <dd>I am good at proofreading, and written communication skill, have contributed articles to institute's annual magazine, have partcipated in essay writing competition. </dd>
-                      <dt></dt>
                     </dl>
                 </div><!-- col -->
                 
@@ -110,6 +101,23 @@
                     <a class="w3-btn-floating w3-hover-dark-grey" style="position:absolute;top:45%;right:0" onclick="plusDivs(1)">❯</a>
                   </div>
                 </div> <!-- col -->
+              </div><!-- row -->
+              <div class="w3-row-padding">
+                <div class="w3-col">
+                  <dl>
+                    <dt><i class="fa fa-css3" aria-hidden="true"></i> ANIMATOR</dt>
+                        <dd>Using CSS3 keyframe animations or Adobe Photoshop CS6, I can build high performance customized animations in your UI. <a href="https://goo.gl/photos/3trtkzuWVutgSi3w7">WORK SAMPLE</a> </dd>
+                      <dt><i class="fa fa-pencil-square-o" aria-hidden="true"></i> IMAGE EDITOR</dt>
+                        <dd>Using Adobe Photoshop CS6, I do non-destructive, revision controlled editing of pictures, images. <a href="https://goo.gl/photos/3trtkzuWVutgSi3w7">WORK SAMPLE</a></dd>
+                      <dt><i class="fa fa-line-chart" aria-hidden="true"></i> CONSISTENT PERFORMER</dt>
+                        <dd>I am a consistent performer as despite tons of ups and downs in my life. I always secured approximately same score in my academics.</dd>
+                      <dt><i class="fa fa-graduation-cap" aria-hidden="true"></i> SELF-LEARNER</dt>
+                        <dd>I am a self-learner. I keep on updating/upgrading my skills, learning new skills on Lynda.com and Udemy.com </dd>
+                      <dt><i class="fa fa-eye" aria-hidden="true"></i> PROOFREADER</dt>
+                        <dd>I am good at proofreading, and written communication skill, have contributed articles to institute's annual magazine, have partcipated in essay writing competition. </dd>
+                      <dt></dt>
+                  </dl>
+                </div>
               </div>
            </section>
 
