Adds christmas lights using css3 only

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <link rel="stylesheet" type="text/css" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/w3.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/christmas-lights.css">
+        <link href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas" rel="stylesheet">
         <link rel="stylesheet" href="css/timeline.css">
         <link rel="stylesheet" href="css/keyframeAnimations.css">
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
@@ -38,7 +40,41 @@
  
       <header id="menu" ng-include="'components/navbar.html'"></header>
 
-      <article>
+      <ul id="wire">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <h2 id="christmas">Merry Christmas!</h2>
+
+      <article id="main">
         <div id="loader" class="w3-jumbo"><i class="fa fa-spinner w3-spin w3-text-green" ng-hide="hideSpinner"></i></div>
         <section ng-include="'components/siteheader.html'"></section>
 
