--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                         Have been a member of student council
                       </div>
                     </div>
-                    <a class="w3-btn-floating w3-hover-dark-grey" style="position:absolute;top:45%;left:0" onclick="plusDivs(-1)">❮</a>
-                    <a class="w3-btn-floating w3-hover-dark-grey" style="position:absolute;top:45%;right:0" onclick="plusDivs(1)">❯</a>
+                    <a class="w3-btn-floating w3-hover-dark-grey" style="position:absolute;top:45%;left:0;z-index:0;" onclick="plusDivs(-1)">❮</a>
+                    <a class="w3-btn-floating w3-hover-dark-grey" style="position:absolute;top:45%;right:0;z-index:0;" onclick="plusDivs(1)">❯</a>
                   </div>
                 </div> <!-- col -->
               </div><!-- row -->
