Implements best practices, relative positioning of elements in site header component, personal-info section, improves appearance.

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <div id="loader" class="w3-jumbo"><i class="fa fa-spinner w3-spin w3-text-green" ng-hide="hideSpinner"></i></div>
         <section ng-include="'components/siteheader.html'"></section>
 
-          <section class="w3-container w3-card-4" id="introduction">
-              <div class="w3-row-padding">
+          <section class="w3-container" id="introduction">
+              <div class="w3-row">
                 <div class="w3-col l6">
                   <header class="w3-green">
                     <h3>May I introduce myself?</h3>
@@ -97,7 +97,9 @@
                         <dd>Using my Git and Github version control skills I can easily maintain my source code avoiding complexity and bugs, Contribute to a project from anywhere in the world.</dd>
                       <dt><i class="fa fa-pie-chart" aria-hidden="true"></i> DATA VISUALIZER</dt>
                         <dd>Using Google Chart interactive charting library, I can build dashboard, represent dynamic data visually.</dd>
-                    </dl>
+                      <dt><i class="fa fa-css3" aria-hidden="true"></i> ANIMATOR</dt>
+                          <dd>Using CSS3 keyframe animations or Adobe Photoshop CS6, I can build high performance customized animations in your UI. <a href="https://goo.gl/photos/3trtkzuWVutgSi3w7">WORK SAMPLE</a> </dd>
+                      </dl>
                 </div><!-- col -->
                 
                 <div class="w3-col l6">
@@ -141,8 +143,6 @@
               <div class="w3-row-padding">
                 <div class="w3-col">
                   <dl>
-                    <dt><i class="fa fa-css3" aria-hidden="true"></i> ANIMATOR</dt>
-                        <dd>Using CSS3 keyframe animations or Adobe Photoshop CS6, I can build high performance customized animations in your UI. <a href="https://goo.gl/photos/3trtkzuWVutgSi3w7">WORK SAMPLE</a> </dd>
                       <dt><i class="fa fa-pencil-square-o" aria-hidden="true"></i> IMAGE EDITOR</dt>
                         <dd>Using Adobe Photoshop CS6, I do non-destructive, revision controlled editing of pictures, images. <a href="https://goo.gl/photos/3trtkzuWVutgSi3w7">WORK SAMPLE</a></dd>
                       <dt><i class="fa fa-line-chart" aria-hidden="true"></i> CONSISTENT PERFORMER</dt>
