Improves slide show.

--- a/index.html
+++ b/index.html
@@ -97,52 +97,48 @@
                         <dd>Using my Git and Github version control skills I can easily maintain my source code avoiding complexity and bugs, Contribute to a project from anywhere in the world.</dd>
                       <dt><i class="fa fa-pie-chart" aria-hidden="true"></i> DATA VISUALIZER</dt>
                         <dd>Using Google Chart interactive charting library, I can build dashboard, represent dynamic data visually.</dd>
-                      <dt><i class="fa fa-css3" aria-hidden="true"></i> ANIMATOR</dt>
-                          <dd>Using CSS3 keyframe animations or Adobe Photoshop CS6, I can build high performance customized animations in your UI. <a href="https://goo.gl/photos/3trtkzuWVutgSi3w7">WORK SAMPLE</a> </dd>
-                      </dl>
+                    </dl>
                 </div><!-- col -->
                 
                 <div class="w3-col l6">
-                  <div class="w3-content" style="max-width:800px;position:relative">
-                    <header class="w3-green">
-                      <h3><i class="fa fa-trophy" aria-hidden="true"></i> Achievements &amp; Participations</h3>
-                    </header>
-
-                    <div class="w3-display-container mySlides">
+                  <header class="w3-green">
+                    <h3><i class="fa fa-trophy" aria-hidden="true"></i> Achievements &amp; Participations</h3>
+                  </header>
+                  <div class="slides" style="max-width:800px;position:relative">
+                    <figure class="w3-display-container mySlides">
                       <img ng-src="img/quiz.jpg" style="width:100%" class="w3-animate-opacity">
-                      <div class="w3-display-bottomleft w3-large w3-black">
+                      <figcaption>
                         Runner up in Technical Quiz
-                      </div>
-                    </div>
-
-                    <div class="w3-display-container mySlides">
+                      </figcaption>
+                    </figure>
+                    <figure class="w3-display-container mySlides">
                       <img src="img/webgeek.jpg" style="width:100%" class="w3-animate-opacity">
-                      <div class="w3-display-bottomleft w3-large w3-black">
+                      <figcaption>
                         Won Web Design Competition
-                      </div>
-                    </div>
-
-                    <div class="w3-display-container mySlides">
+                      </figcaption>
+                    </figure>
+                    <figure class="w3-display-container mySlides">
                       <img ng-src="img/coverdesign.jpg" style="width:100%" class="w3-animate-opacity">
-                      <div class="w3-display-bottomright w3-large w3-black">
+                      <figcaption>
                         Participated in Magazine Cover Design Competition
-                      </div>
-                    </div>
-
-                    <div class="w3-display-container mySlides">
+                      </figcaption>
+                    </figure>
+                    <figure class="w3-display-container mySlides">
                       <img ng-src="img/studentcouncil.jpg" style="width:100%" class="w3-animate-opacity">
-                      <div class="w3-display-bottomright w3-large w3-black">
+                      <figcaption>
                         Have been a member of student council
-                      </div>
-                    </div>
-                    <a class="w3-btn-floating w3-hover-dark-grey" style="position:absolute;top:45%;left:0;z-index:0;" onclick="plusDivs(-1)">❮</a>
-                    <a class="w3-btn-floating w3-hover-dark-grey" style="position:absolute;top:45%;right:0;z-index:0;" onclick="plusDivs(1)">❯</a>
+                      </figcaption>
+                    </figure>
+                      <a id="left" onclick="plusDivs(-1)"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
+                      <a id="right" onclick="plusDivs(1)"><i class="fa fa-chevron-right" aria-hidden="true"></i></a>
                   </div>
                 </div> <!-- col -->
               </div><!-- row -->
               <div class="w3-row-padding">
                 <div class="w3-col">
                   <dl>
+                      <dt><i class="fa fa-css3" aria-hidden="true"></i> ANIMATOR</dt>
+                          <dd>Using CSS3 keyframe animations or Adobe Photoshop CS6, I can build high performance customized animations in your UI. <a href="https://goo.gl/photos/3trtkzuWVutgSi3w7">WORK SAMPLE</a> </dd>
                       <dt><i class="fa fa-pencil-square-o" aria-hidden="true"></i> IMAGE EDITOR</dt>
                         <dd>Using Adobe Photoshop CS6, I do non-destructive, revision controlled editing of pictures, images. <a href="https://goo.gl/photos/3trtkzuWVutgSi3w7">WORK SAMPLE</a></dd>
                       <dt><i class="fa fa-line-chart" aria-hidden="true"></i> CONSISTENT PERFORMER</dt>
