--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Hire the Most Creative Front End Developer | Software Engineer</title>
+        <title>HIRE THE MOST CREATIVE FRONT END DEVELOPER | SOFTWARE ENGINEER</title>
         <meta name="description" content="Navneet is an awarded wekgeek and the most creative Front End Developer | Software Engineer. He is also a consistent self-learner. He likes to make the web a beautiful place by his design and animation skills. His measure skills includes AngularJs, Ionic, SASS, Bootstrap3, CSS3, JavaScript, HTML5, Version COntrol using Git and Github etc.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <base target="_blank">
@@ -45,7 +45,7 @@
       <ul id="wire">
         <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li>
       </ul>
-        <h2 id="christmas">Merry Christmas!</h2>
+        <h2 id="christmas">Happy New Year</h2>
 
     <!-- side nav that holds social sharing buttons -->
     <aside ng-include="'components/sidenav.html'" style="position:absolute;top:30%;"></aside>
@@ -133,11 +133,21 @@
 
         <!-- TIMELINE -->
         <section ng-include="'components/timeline.html'"></section>
+
+        <div class="w3-row">
+          <div class="w3-col">
+            <header class="w3-green"><h3>PROJECT SHOW CASE</h3></header>
+            <button class="w3-btn" ui-sref="pig-animation">PIG ANIMATION</button>
+            <button class="w3-btn" ui-sref="portfolio">portfolio</button>
+            <ui-view></ui-view>
+          </div>
+        </div>
         
         <!-- EDUCATION and TRAININGS-->
-        <section ng-include="'components/educationandtraining.html'"></section>
+        <section ng-include="'components/onlinetrainings.html'"></section>
         <!-- SKILLS and HOBBIES-->
         <section ng-include="'components/skills.html'"></section>
+
         <!-- CONTACT US -->
         <section ng-include="'components/contactus.html'"></section>
       </article>
