Implements SASS - Syntatically Awesome Style Sheet.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
         <link rel="stylesheet" type="text/css" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/w3.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" type="text/css" href="css/christmas-lights.css">
         <link href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas" rel="stylesheet">
-        <link rel="stylesheet" href="css/timeline.css">
-        <link rel="stylesheet" href="css/keyframeAnimations.css">
 
         <!--Load the AJAX API-->
         <script type="text/javascript" src="js/googlechart.js"></script>
@@ -45,7 +42,7 @@
       <ul id="wire">
         <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li>
       </ul>
-        <h2 id="christmas">Merry Christmas!</h2>
+        <h2 id="christmas">Happy New Year</h2>
 
     <!-- side nav that holds social sharing buttons -->
     <aside ng-include="'components/sidenav.html'" style="position:absolute;top:30%;"></aside>
