--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <base target="_blank">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <!-- <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script> -->
 
         <!-- font awesome CDN for social icons -->
         <link rel="stylesheet" type="text/css" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -37,12 +37,7 @@
         <div class="modal" ng-hide="hideSpinner">
           <div class="w3-jumbo modal-content"><i class="fa fa-spinner w3-spin w3-text-green"></i></div>
         </div> 
-      <header id="menu" ng-include="'components/navbar.html'"></header>
-
-      <ul id="wire">
-        <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li>
-      </ul>
-        <h2 id="christmas">Happy New Year</h2>
+      <header id="menu-wrapper" ng-include="'components/navbar.html'"></header>
 
     <!-- side nav that holds social sharing buttons -->
     <aside ng-include="'components/sidenav.html'" style="position:absolute;top:30%;"></aside>
