--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>HIRE THE MOST CREATIVE FRONT END DEVELOPER | SOFTWARE ENGINEER</title>
+        <title>HIRE THE MOST CREATIVE FRONT END DEVELOPER | SOFTWARE DEVELOPER</title>
         <meta name="description" content="Navneet is an awarded wekgeek and the most creative Front End Developer | Software Engineer. He is also a consistent self-learner. He likes to make the web a beautiful place by his design and animation skills. His measure skills includes AngularJs, Ionic, SASS, Bootstrap3, CSS3, JavaScript, HTML5, Version COntrol using Git and Github etc.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <base target="_blank">
@@ -45,7 +45,7 @@
       <ul id="wire">
         <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li> <li></li>
       </ul>
-        <h2 id="christmas">Happy New Year</h2>
+        <h2 id="christmas">Happy Holi</h2>
 
     <!-- side nav that holds social sharing buttons -->
     <aside ng-include="'components/sidenav.html'" style="position:absolute;top:30%;"></aside>
@@ -63,15 +63,13 @@
                     <dl>
                       <p>Following terms describes my personality well:</p>
                       <dt><i class="fa fa-code" aria-hidden="true"></i> APP DEVELOPER</dt>
-                        <dd>Using Angular Js, Ionic I can build cross browser <i class="fa fa-mobile" aria-hidden="true"></i>
+                        <dd>Using Angular Js, JavaScript, CSS3, I can build dynamic, interactive, cross browser <i class="fa fa-mobile" aria-hidden="true"></i>
                         <i class="fa fa-tablet" aria-hidden="true"></i> <i class="fa fa-desktop" aria-hidden="true"></i> platform independent
                         <i class="fa fa-android" aria-hidden="true"></i> <i class="fa fa-apple" aria-hidden="true"></i> <i class="fa fa-windows" aria-hidden="true"></i> HTML enhanced web / mobile applications.</dd>
                       <dt><i class="fa fa-bug" aria-hidden="true"></i> DEBUGGER</dt>
                         <dd>Using Google Chrome Dev Tool I can easily inspect web/mobile apps, locate bugs and debug, and optimize performance to maximize speed and scale.</dd>
                       <dt><i class="fa fa-code-fork" aria-hidden="true"></i> VERSION CONTROLLER</dt>
                         <dd>Using my Git and Github version control skills I can easily maintain my source code avoiding complexity and bugs, Contribute to a project from anywhere in the world.</dd>
-                      <dt><i class="fa fa-pie-chart" aria-hidden="true"></i> DATA VISUALIZER</dt>
-                        <dd>Using Google Chart interactive charting library, I can build dashboard, represent dynamic data visually.</dd>
                     </dl>
                 </div><!-- col -->
                 
