Adds new project dashboard in work sample/projects.

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
             <dd>Using Angular Js, JavaScript, CSS3, I can build dynamic, interactive, cross browser <i class="fa fa-mobile" aria-hidden="true"></i>
               <i class="fa fa-tablet" aria-hidden="true"></i> <i class="fa fa-desktop" aria-hidden="true"></i> platform independent
               <i class="fa fa-android" aria-hidden="true"></i> <i class="fa fa-apple" aria-hidden="true"></i> <i class="fa fa-windows" aria-hidden="true"></i> HTML enhanced web / mobile applications.</dd>
+            <dt><i class="fa fa-search" aria-hidden="true"></i> Tester</dt>
+            <dd> I do unit testing of AngularJs Controllers, Functions, Services, Factories. Mock AndularJs modules, $http REST APIs calls using ng-mock. I also do End-to-End testing of AngularJs Application using Protractor.
+            </dd>
             <dt><i class="fa fa-bug" aria-hidden="true"></i> DEBUGGER</dt>
             <dd>Using Google Chrome Dev Tool I can easily inspect web/mobile apps, locate bugs and debug, and optimize performance to maximize speed and scale.</dd>
             <dt><i class="fa fa-code-fork" aria-hidden="true"></i> VERSION CONTROLLER</dt>
