Corrects spelling and sets page thumbnail image.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>HIRE THE MOST CREATIVE FRONT END DEVELOPER | SOFTWARE DEVELOPER</title>
-  <meta name="description" content="Navneet is an awarded wekgeek and the most creative Front End Developer | Software Engineer. He is also a consistent self-learner. He likes to make the web a beautiful place by his design and animation skills. His measure skills includes AngularJs, Ionic, SASS, Bootstrap3, CSS3, JavaScript, HTML5, Version COntrol using Git and Github etc.">
+  <meta name="description" content="Navneet is an awarded webgeek and the most creative Front End Developer | Software Engineer. He is also a consistent self-learner. He likes to make the web a beautiful place by his design and animation skills. His measure skills includes AngularJs, Ionic, SASS, Bootstrap3, CSS3, JavaScript, HTML5, Version COntrol using Git and Github etc.">
+  <meta name="shareaholic:image" content="img/quiz.jpg"/>
+  <meta name="og:image" content="img/quiz.jpg"/>
+  <meta name="twitter:image" content="img/quiz.jpg"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base target="_blank">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
